--- a/index.html
+++ b/index.html
@@ -2216,7 +2216,7 @@
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:needhelp@company.com ">needhelp@company.com</a></p>
+                                            <p><a href="mailto:info@proyouthfoundation.co.za ">info@proyouthfoundation.co.za</a></p>
                                         </div>
                                     </li>
                                     <li>
