updated phone number

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                                 </div>
                                                 <div class="content">
                                                     <p>Helpline</p>
-                                                    <h5><a href="tel:980009630">+ 98 (000) - 9630</a></h5>
+                                                    <h5><a href="tel:+27840690722">+27 84 069 0722</a></h5>
                                                 </div>
                                             </li>
                                             <li>
@@ -1958,7 +1958,7 @@
                             </div>
                             <div class="contact-one__content">
                                 <p class="contact-one__sub-title">Helpline</p>
-                                <h3 class="contact-one__number"><a href="tel:980009630">+ 98 (000) - 9630</a></h3>
+                                <h3 class="contact-one__number"><a href="tel:+27840690722">+27 84 069 0722</a></h3>
                             </div>
                         </li>
                         <li class="contact-one__single">
@@ -2224,7 +2224,7 @@
                                             <i class="fas fa-phone-alt"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="tel:980009630">+ 98 (000) - 9630</a></p>
+                                            <p><a href="tel:+27840690722">+27 84 069 0722</a></p>
                                         </div>
                                     </li>
                                 </ul>
