--- a/index.html
+++ b/index.html
@@ -1861,17 +1861,17 @@
                     <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                         <div class="team-one__single">
                             <div class="team-one__img">
-                                <img src="assets/images/team/team-1-1.jpg" alt="">
-                                <div class="team-one__social">
+                                <img src="assets/images/team/zandile.png" alt="">
+                                <!-- <div class="team-one__social">
                                     <a href="#"><i class="fab fa-facebook"></i></a>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                     <a href="#"><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="team-one__content">
-                                <h3 class="team-one__name"><a href="#">Sarah albert</a></h3>
-                                <p class="team-one__sub-title">Volunteer</p>
+                                <h3 class="team-one__name"><a href="#">Zandile Sihlali</a></h3>
+                                <p class="team-one__sub-title">Founder & Managing Director</p>
                             </div>
                         </div>
                     </div>
@@ -1880,17 +1880,17 @@
                     <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
                         <div class="team-one__single">
                             <div class="team-one__img">
-                                <img src="assets/images/team/team-1-2.jpg" alt="">
-                                <div class="team-one__social">
+                                <img src="assets/images/team/Simphiwe.png" alt="">
+                                <!-- <div class="team-one__social">
                                     <a href="#"><i class="fab fa-facebook"></i></a>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                     <a href="#"><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="team-one__content">
-                                <h3 class="team-one__name"><a href="#">Kevin martin</a></h3>
-                                <p class="team-one__sub-title">Volunteer</p>
+                                <h3 class="team-one__name"><a href="#">Simphiwe Mufadi</a></h3>
+                                <p class="team-one__sub-title">Projects Manager</p>
                             </div>
                         </div>
                     </div>
@@ -1899,17 +1899,17 @@
                     <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="300ms">
                         <div class="team-one__single">
                             <div class="team-one__img">
-                                <img src="assets/images/team/team-1-3.jpg" alt="">
-                                <div class="team-one__social">
+                                <img src="assets/images/team/Pam.png" alt="">
+                                <!-- <div class="team-one__social">
                                     <a href="#"><i class="fab fa-facebook"></i></a>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                     <a href="#"><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="team-one__content">
-                                <h3 class="team-one__name"><a href="#">Aleesha eve</a></h3>
-                                <p class="team-one__sub-title">Volunteer</p>
+                                <h3 class="team-one__name"><a href="#">Pam Tshibubudze</a></h3>
+                                <p class="team-one__sub-title">Treasurer</p>
                             </div>
                         </div>
                     </div>
@@ -1918,17 +1918,17 @@
                     <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                         <div class="team-one__single">
                             <div class="team-one__img">
-                                <img src="assets/images/team/team-1-4.jpg" alt="">
-                                <div class="team-one__social">
+                                <img src="assets/images/team/Tebogo.png" alt="">
+                                <!-- <div class="team-one__social">
                                     <a href="#"><i class="fab fa-facebook"></i></a>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-pinterest-p"></i></a>
                                     <a href="#"><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="team-one__content">
-                                <h3 class="team-one__name"><a href="#">David cooper</a></h3>
-                                <p class="team-one__sub-title">Volunteer</p>
+                                <h3 class="team-one__name"><a href="#">Tebogo Sehlale</a></h3>
+                                <p class="team-one__sub-title">Operations Manager</p>
                             </div>
                         </div>
                     </div>
@@ -2229,10 +2229,9 @@
                                     </li>
                                 </ul>
                                 <div class="site-footer__social">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-facebook"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.youtube.com/channel/UCkx5hMyuJFIU6fG3275g8ng"><i class="fab fa-youtube"></i></a>
+                                    <a href="https://web.facebook.com/pyfproyouth"><i class="fab fa-facebook"></i></a>
+                                    <a href="https://www.instagram.com/proyouth_foundation"><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -2244,7 +2243,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
-                                <p class="site-footer__bottom-text">© All Copyright 2022 by <a href="http://proyouthfoundation.co.za/">http://proyouthfoundation.co.za/</a>
+                                <p class="site-footer__bottom-text">© All Copyright <script>document.write(new Date().getFullYear());</script> by <a href="http://proyouthfoundation.co.za/">proyouthfoundation.co.za</a>
                                 </p>
                             </div>
                         </div>
