--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
                             <div class="about-two__img-box  wow slideInLeft" data-wow-delay="100ms"
                                 data-wow-duration="2500ms">
                                 <div class="about-two__img">
-                                    <img src="assets/images/resources/about-two-img-1.jpg" alt="">
+                                    <img src="assets/images/about-2.jpg" alt="">
                                 </div>
                                 <div class="about-two__img-two">
-                                    <img src="assets/images/resources/about-two-img-2.jpg" alt="">
+                                    <img src="assets/images/about-1.jpg" alt="">
                                 </div>
                                 <div class="about-two__left-title-box">
-                                    <h3 class="about-two__left-title">Help us today!</h3>
+                                    <h3 class="about-two__left-title">Freedom!</h3>
                                 </div>
                                 <div class="about-two__shape-1 zoominout">
                                     <img src="assets/images/shapes/about-two-shape-1.png" alt="">
