--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                 <div class="col-xl-12">
                                     <div class="main-slider-two__content">
                                         <p class="main-slider-two__sub-title">Helping Today. Helping Tomorrow</p>
-                                        <h2 class="main-slider-two__title">Give Child the <br> Gift of Eductions</h2>
+                                        <h2 class="main-slider-two__title">Give Child the <br> Gift of Education</h2>
                                         <!-- <div class="main-slider-two__btn-box">
                                             <a href="#" class="thm-btn main-slider-two__btn"> Discover more</a>
                                         </div> -->
